fix: align the download button to center (#41)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,3 +12,9 @@
 	font-size:larger;
 	font-weight:lighter;
 }
+
+#button{
+	display: flex;
+	justify-content: center;
+	margin-bottom: 10px;
+}
